//
// Copyright 2023 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" B1IS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = "proto3";

package openconfig.attestz;

option go_package = "github.com/openconfig/attestz";

enum ControlCardRole {
  CONTROL_CARD_ROLE_UNSPECIFIED = 0;
  CONTROL_CARD_ROLE_ACTIVE = 1;
  CONTROL_CARD_ROLE_STANDBY = 2;
}

// Full description of a control card with switch vendor identity fields.
message ControlCardVendorId {
  ControlCardRole control_card_role = 1;
  string control_card_serial = 2;
  string control_card_slot = 3;
  string chassis_manufacturer = 4;
  string chassis_part_number = 5;
  string chassis_serial_number = 6;
}

// Used for selecting a switch control card by one of its indentifiers.
message ControlCardSelection {
  oneof control_card_id {
    ControlCardRole role = 1;
    string serial = 2;
    string slot = 3;
  }
}

// Cryptographic hash algorithms supported by TPM 2.0.
enum Tpm20HashAlgo {
  TPM20HASH_ALGO_UNSPECIFIED = 0;
  TPM20HASH_ALGO_SHA1 = 1;
  TPM20HASH_ALGO_SHA256 = 2;
  TPM20HASH_ALGO_SHA384 = 3;
  TPM20HASH_ALGO_SHA512 = 4;
}
